--- a/css/mine-strapUI.css
+++ b/css/mine-strapUI.css
@@ -60,7 +60,7 @@
 .image-section {
   height: 510px;
   border-bottom: 4px solid #1a80a5;
-  background-image: ("SoMuchPenguin.png");
+  background-image: ("../SoMuchPenguin.png");
   background-position: 50% 0px;
   background-size: cover;
   background-attachment: fixed;
